fixed timeline center problem and margin problem on smaller devices

--- a/src/assets/resources/view-styles/timeline.css
+++ b/src/assets/resources/view-styles/timeline.css
@@ -9,7 +9,6 @@ timeline {
 posts {
   display:flex;
   justify-content:center;
-  align-items:flex-start;
   align-content: flex-start;
   flex-wrap: wrap;
   width:100%;
@@ -25,7 +24,7 @@ item {
   max-width:620px;
   height: fit-content;
   box-shadow: 0px 0px 5px rgba(0,0,0,0.3);
-  margin: 30px 200px 0px 200px;
+  margin: 30px calc(50% - 290px) 0 calc(50% - 290px);
   background: #fff;
   border-radius: 5px;
 }
@@ -64,6 +63,7 @@ item-stat {
 @media (max-width: 990px) {
   item {
     min-width: 86%;
+    width: 86%;
   }
 }
 
